app/assets/stylesheets/components/_header.scss
header {
  height: 60px;
  background-color: $darkgray;
  color: $gray;
  display: flex;
  align-items: center;
  justify-content: space-between;
  box-sizing: border-box;
  border-bottom: 5px solid $coral;
  padding: 0 40px;
  -webkit-box-shadow: 0px 1px 5px 0px rgba(153,153,153,1);
  -moz-box-shadow: 0px 1px 5px 0px rgba(153,153,153,1);
  box-shadow: 0px 1px 5px 0px rgba(153,153,153,1);

  a:hover {
    color: $blue;
  }
}

.header-left {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 220px;
}

.header-title {
  color: white;
  font-size: 20px;
  text-transform: uppercase;
  display: flex;
  align-items: center;

  &:hover {
    color: white;
  }

  span {
    font-weight: 700;
    margin-left: 10px;
  }
}

.header-logo {
  width: 25px;
  height: 25px;
  -webkit-filter: invert(100%);
  filter: invert(100%);
}

.header-greeting {
  display: flex;
  width: 150px;
  align-items: center;
  justify-content: space-between;
}

